style.css
/* ... */
.politica {
    display: flex;
    flex-direction: column;
    align-items: center;
    line-height: 1.8;
}
/* default not showing on desktop */
.politica .politicaText {
    padding: 30px 0;
}
.hamburger-menu {
    display: none;
}
.titulo .titulo-h2-mobile {
    display: none;
}
#menu__toggle {
    display: none;
}
.titulo-p-mobile{
    display: none;
}
@media (max-width: 767px) {
    /* no links, no gap */
    #navbar{
        gap: 0;
    }
    /* hide the links on mobile */
    #navbar > a {
        display: none;
    }
    .banner > .blackFilter > h1 {
        font-size: xxx-large;
    }
    .banner {
        height: 800px;
    }
    .container {
        width: 100%;
    }
    .galeria {
        grid-template-columns: repeat(1, 1fr);
        padding: 10px;
        gap: 10px;
    }
    .titulo {
        margin: 15px 20px;
        align-items: flex-start;
        gap: 1rem;
    }
    .titulo .titulo-p {
        display: none;
    }
    .titulo .titulo-h2 {
        display: none;
    }
    .titulo .titulo-h2-mobile {
        display: block;
    }

    footer > .menu {
        color: white;
        align-items: center;
        width: 75%;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 1rem;
    }

    /* hamburger menu for mobile start */
    /* #menu__toggle {
        display: block;
    } */
    .hamburger-menu {
        display: block;
    }
    #menu__toggle {
        opacity: 0;
    }
    #menu__toggle:checked + .menu__btn > span {
        transform: rotate(45deg);
    }
    #menu__toggle:checked + .menu__btn > span::before {
        top: 0;
        transform: rotate(0deg);
    }
    #menu__toggle:checked + .menu__btn > span::after {
        top: 0;
        transform: rotate(90deg);
    }
    #menu__toggle:checked ~ .menu__box {
        left: 0 !important;
    }
    .menu__btn {
        position: absolute;
        top: 40px;
        left: 30px;
        width: 26px;
        height: 26px;
        cursor: pointer;
        z-index: 60;
    }
    .menu__btn > span,
    .menu__btn > span::before,
    .menu__btn > span::after {
        display: block;
        position: absolute;
        width: 100%;
        height: 2px;
        background-color: #616161;
        transition-duration: 0.25s;
        z-index: 60;
    }
    .menu__btn > span::before {
        content: "";
        top: -8px;
    }
    .menu__btn > span::after {
        content: "";
        top: 8px;
    }
    .menu__box {
        display: block;
        position: fixed;
        top: 0;
        left: -100%;
        width: 300px;
        height: 100%;
        margin: 0;
        padding: 80px 0;
        list-style: none;
        background-color: #eceff1;
        box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
        transition-duration: 0.25s;
        z-index: 50;
    }
    .menu__item {
        display: block;
        padding: 12px 24px;
        color: #333;
        font-family: "Roboto", sans-serif;
        font-size: 20px;
        font-weight: 600;
        text-decoration: none;
        transition-duration: 0.25s;
    }
    .menu__item:hover {
        background-color: #cfd8dc;
    }
    /* hamburger end */
}

